fix: apply PR review suggestions for media token and limit handling
Agent-Logs-Url: https://github.com/BUAA2026SE-404NotFound/TimeCampus-Backend/sessions/20fc3f11-d6b3-4f5a-b5d2-f22941da33a4

Co-authored-by: kurrna <158550598+kurrna@users.noreply.github.com>